# BookPriceFinder

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cleanup_audit.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
bookfinder/: cli.py  config.py  models.py  search.py  web.py
bookfinder/adapters/: _browser.py  abebooks.py  base.py  generic.py  gutenberg.py  hpb.py  openlibrary.py  pangobooks.py  registry.py  thriftbooks.py  worldofbooks.py
bookfinder/db/: database.py
bookfinder/utils/: parsing.py
bookfinder/web/: main.py  utils.py
bookfinder/web/templates/: base.html  index.html  results.html  status.html  wishlist.html
tests/: test_adapters.py  test_cli.py  test_config.py  test_db.py  test_models.py  test_parsing.py  test_search.py  test_utils.py
